@@ -1,3 +1,3 @@
 /.ptichka.json
 /.ptichkarc.toml
-/ptichka
+/cmd/ptichka/ptichka
