@@ -1,3 +1,7 @@
+2016-07-29  Danil Kutkevich  <danil@kutkevich.org>
+
+        * ptichka.go (Fly): Separate in two package (lib and cmd)
+
 2016-07-28  Danil Kutkevich  <danil@kutkevich.org>
 
         * main.go (main, ptichka): Ability to handle multiple accounts
